engine/Torque6-Bridge/SimObjects2/Assets/AssetManager.cs

using System;
using System.Runtime.InteropServices;
using Torque6_Bridge.Namespaces;

namespace Torque6_Bridge.SimObjects.Assets
{
   public unsafe class AssetManager : SimObject
   {
      public AssetManager()
      {
         ObjectPtr = Sim.WrapObject(InternalUnsafeMethods.AssetManagerCreateInstance());
      }

      public AssetManager(uint pId) : base(pId)
      {
      }

      public AssetManager(IntPtr pObjPtr) : base(pObjPtr)
      {
      }

      public AssetManager(string pName) : base(pName)
      {
      }

      public AssetManager(Sim.SimObjectPtr* pObjPtr) : base(pObjPtr)
      {
      }

      #region UnsafeNativeMethods

      internal new struct InternalUnsafeMethods
      {
         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern IntPtr AssetManagerCreateInstance();

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetEchoInfo(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerSetEchoInfo(IntPtr pObjectPtr, bool val);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetIgnoreAutoUnload(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerSetIgnoreAutoUnload(IntPtr pObjectPtr, bool val);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerCompileReferencedAssets(IntPtr pObjectPtr,
            ModuleDefinition moduleDefinition);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerAddModuleDeclaredAssets(IntPtr pObjectPtr,
            ModuleDefinition moduleDefinition);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerAddDeclaredAsset(IntPtr pObjectPtr, IntPtr moduleDefinition,
            string assetFilePath);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerAddPrivateAsset(IntPtr pObjectPtr, IntPtr assetObject);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRemoveDeclaredAssets(IntPtr pObjectPtr,
            ModuleDefinition moduleDefinition);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRemoveDeclaredAsset(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetName(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetDescription(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetCategory(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetType(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetFilePath(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerGetAssetPath(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern IntPtr AssetManagerGetAssetModule(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetInternal(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetPrivate(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetAutoUnload(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsAssetLoaded(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsDeclaredAsset(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerIsReferencedAsset(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRenameDeclaredAsset(IntPtr pObjectPtr, string assetIdFrom,
            string assetIdTo);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRenameReferencedAsset(IntPtr pObjectPtr, string assetIdFrom,
            string assetIdTo);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern string AssetManagerAcquireAsset(IntPtr pObjectPtr, string assetId, bool asPrivate);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerReleaseAsset(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerPurgeAssets(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerDeleteAsset(IntPtr pObjectPtr, string assetId, bool deleteLooseFiles,
            bool deleteDependencies);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerRefreshAsset(IntPtr pObjectPtr, string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerRefreshAllAssets(IntPtr pObjectPtr, bool includeUnloaded);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerSaveAssetTags(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerRestoreAssetTags(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern IntPtr AssetManagerGetAssetTags(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAllAssets(IntPtr pObjectPtr, IntPtr assetQuery,
            bool ignoreInternal, bool ignorePrivate);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetName(IntPtr pObjectPtr, IntPtr assetQuery, string assetName,
            bool partialName);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetCategory(IntPtr pObjectPtr, IntPtr assetQuery,
            string assetName, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetAutoUnload(IntPtr pObjectPtr, IntPtr assetQuery,
            bool assetAutoUnload, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetInternal(IntPtr pObjectPtr, IntPtr assetQuery,
            bool assetInternal, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetPrivate(IntPtr pObjectPtr, IntPtr assetQuery,
            bool assetPrivate, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetType(IntPtr pObjectPtr, IntPtr assetQuery, string assetType,
            bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetDependsOn(IntPtr pObjectPtr, IntPtr assetQuery,
            string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetIsDependedOn(IntPtr pObjectPtr, IntPtr assetQuery,
            string assetId);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindInvalidAssetReferences(IntPtr pObjectPtr, IntPtr assetQuery);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindTaggedAssets(IntPtr pObjectPtr, IntPtr assetQuery,
            string assetTagNames, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern int AssetManagerFindAssetLooseFile(IntPtr pObjectPtr, IntPtr assetQuery,
            string assetLooseFile, bool assetQueryAsSource);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetDeclaredAssetCount(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetReferencedAssetCount(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetLoadedInternalAssetCount(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetMaxLoadedInternalAssetCount(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetLoadedExternalAssetCount(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern bool AssetManagerGetMaxLoadedExternalAssetCount(IntPtr pObjectPtr);

         [DllImport("Torque6_DEBUG", CallingConvention = CallingConvention.Cdecl)]
         internal static extern void AssetManagerDumpDeclaredAssets(IntPtr pObjectPtr);
      }

      #endregion

      #region Properties

      public bool EchoInfo
      {
         get
         {
            if (IsDead()) throw new SimObjectPointerInvalidException();
            return InternalUnsafeMethods.AssetManagerGetEchoInfo(ObjectPtr->ObjPtr);
         }
         set
         {
            if (IsDead()) throw new SimObjectPointerInvalidException();
            InternalUnsafeMethods.AssetManagerSetEchoInfo(ObjectPtr->ObjPtr, value);
         }
      }
